// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test ShowablePasswordInput should render correctly 1`] = `
<div>
  <div
    class="showable-password-input"
  >
    <input
      id="password-input"
      placeholder="Password"
      type="password"
    />
    <img
      src="img/right-panel/icon-eyeopen.svg"
    />
  </div>
</div>
`;

exports[`test ShowablePasswordInput should render correctly 2`] = `
<div>
  <div
    class="showable-password-input"
  >
    <input
      id="password-input"
      placeholder="Password"
      type="text"
    />
    <img
      src="img/right-panel/icon-eyeclose.svg"
    />
  </div>
</div>
`;
